[project]
name = "Indexter"
version = "0.1.0"
description = "CLI tool and MCP server for enhanced codebase context via RAG"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "anyio>=4.0.0",
    "pathspec>=0.12.1",
    "qdrant-client[fastembed]>=1.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tomli>=2.0.0",
    "tomlkit>=0.13.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
]

[project.optional-dependencies]
full = [
    "fastmcp>=0.4.1",
    "rich>=13.9.0",
    "typer>=0.12.0",
]
cli = [
    "rich>=13.9.0",
    "typer>=0.12.0",
]
mcp = [
    "fastmcp>=0.4.1",
]
core = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "rust-just>=1.45.0",
]

[project.scripts]
indexter = "indexter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"src/indexter" = "indexter"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
fixable = ["E", "F", "I", "UP"]
unfixable = ["S", "B"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["S"]
