[project]
name = "indexter"
version = "0.1.0"
description = "CLI tool and MCP server for enhanced codebase context via RAG"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Joe Badger"}
]
keywords = ["cli", "mcp", "rag", "vector-search", "tree-sitter", "code-indexing", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "anyio>=4.0.0",
    "pathspec>=0.12.1",
    "qdrant-client[fastembed]>=1.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tomli>=2.0.0",
    "tomlkit>=0.13.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/jdbadger/indexter"
Repository = "https://github.com/jdbadger/indexter"
Documentation = "https://github.com/jdbadger/indexter#readme"
"Bug Tracker" = "https://github.com/jdbadger/indexter/issues"

[project.optional-dependencies]
full = [
    "fastmcp>=0.4.1",
    "rich>=13.9.0",
    "typer>=0.12.0",
]
cli = [
    "rich>=13.9.0",
    "typer>=0.12.0",
]
mcp = [
    "fastmcp>=0.4.1",
]
core = []

[dependency-groups]
dev = [
    "fastmcp>=0.4.1",
    "rich>=13.9.0",
    "typer>=0.12.0",
    "ruff>=0.14.10",
    "rust-just>=1.45.0",
    "ty>=0.0.6",
]
test = [
    {include-group = "dev"},
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
indexter = "indexter.cli:app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
wheel-exclude = ["**/tests", "**/tests/**", "**/conftest.py", "**/__pycache__"]
source-exclude = ["**/tests", "**/tests/**", "**/conftest.py", "**/__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
fixable = ["E", "F", "I", "UP"]
unfixable = ["S", "B"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["S"]

[tool.ty.environment]
python-version = "3.13"

# Relax type checking in test files where Mock objects simulate types
[[tool.ty.overrides]]
include = ["**/tests/**", "**/conftest.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"  # Mock objects don't match exact types
invalid-assignment = "ignore"     # Monkey-patching in tests
missing-argument = "ignore"       # Testing validation errors with empty constructors
unsupported-operator = "ignore"   # Testing with None types
invalid-type-form = "ignore"      # callable type annotations in fixtures
possibly-missing-attribute = "ignore"  # Testing with optional return types
invalid-method-override = "ignore"  # Test fixtures may override with simpler return types
